--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 							<p> Let us know if you have any questions or concerns</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action=""https://formspree.io/xpzyvzpp"">
+									<form method="post" action="https://formspree.io/xpzyvzpp">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
