--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2> BLAH BLAH</h2>
-									<p> BLAH BLAH</p>
+									<h2> Coming Soon</h2>
+									<p> Coming Soon</p>
 							<!--		<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li> 
 									</ul> -->
@@ -61,8 +61,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2> BLAH BLAH</h2>
-									<p> BLAH BLAH</p>
+									<h2> Coming Soon</h2>
+									<p> Coming Soon</p>
 								<!--	<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
@@ -73,8 +73,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2> BLAH BLAH</h2>
-									<p> BLAH BLAH</p>
+									<h2>Coming Soon</h2>
+									<p> Coming Soon</p>
 							<!--		<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
