--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-md-6 col-lg-5">
                     <div class="about_us_text">
                         <h2>About us</h2>
-                        <p> We focus on providing care through telemedicine.</p>
+                        <p> We aim to provide high quality health care in simple and an affordable way.</p>
                       <!--  <a class="btn_2 " href="about">learn more</a> -->
                         <div class="banner_item">
                             <div class="single_item">
