--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="about_us_text">
                         <h2>About us</h2>
                         <p> We aim to provide high quality health care in simple and an affordable way.</p>
-                      <!--  <a class="btn_2 " href="about">learn more</a> -->
+                      <!--  <a class="btn_2 " href="about">learn more</a> 
                         <div class="banner_item">
                             <div class="single_item">
                                 <img src="img/icon/banner_1.svg" alt="">
@@ -120,7 +120,7 @@
                             </div>
                             <div class="single_item">
                                 <img src="img/icon/banner_3.svg" alt="">
-                                <h5>Qualfied</h5>
+                                <h5>Qualfied</h5> -->
                             </div>
                         </div>
                     </div>
