--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     <a class="nav-link" href="about.html">about</a>
                                 </li>-->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="Ourservices.html">Our Services</a>
+                                    <a class="nav-link" href="OurServices.html">Our Services</a>
                                 </li>
 
                                 
