--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-6 col-lg-6">
                     <div class="about_us_img">
-                        <img src="img/top_service.png" alt="">
+                        <img src="img/dreamstime_s_68613275-removebg.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-5">
@@ -147,7 +147,7 @@
                 <div class="col-lg-3 col-sm-12">
                     <div class="single_feature">
                         <div class="single_feature_part">
-                            <span class="single_feature_icon"><img src="img/icon/feature_1.svg" alt=""></span>
+                            <span class="single_feature_icon"><img src="img/icon/feature_2.svg" alt=""></span>
                             <h4>General Medical Visit</h4>
                             <p> The service is primarily for treatment of established conditions rather than diagnosis, and relevant investigations such as blood tests, scans and procedures should have already been completed before referral.</p>
                             
@@ -172,7 +172,7 @@
                 <div class="col-lg-3 col-sm-12">
                     <div class="single_feature">
                         <div class="single_feature_part">
-                            <span class="single_feature_icon"><img src="img/icon/feature_1.svg" alt=""></span>
+                            <span class="single_feature_icon"><img src="img/icon/feature_2.svg" alt=""></span>
                            <h4>Short Term Medicine Refill </h4>
                             <p>We make getting a medication easier than ever. You can book an appointment, speak with a physician online and pick up your prescription from any local pharmacy.</p>
                         </div>
@@ -205,7 +205,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="single_our_depertment">
                                          
-                                            <h4>Chronic medical problems</h4>
+                                    <h4>Chronic medical problems</h4>
                                     <li>Diabetes</li>
                                     <li>Hypertension</li>
                                     <li>High cholesterol </li>
