--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>medical</title>
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/logo - Copy.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="banner_img">
-                        <img src="img/banner_img.png" alt="">
+                        <img src="img/dreamstime_l_180375924-removebg.png" alt="">
                     </div>
                 </div>
             </div>
