--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ we prescribe. If you have insurance, you can use it to pay for your medicine.</p
 				<h3 class="mb-30">What about lab testing?</h3>
 				<div class="row">
 					<div class="col-md-3">
-						<img src="img/elements/d.jpg" alt="" class="img-fluid">
+						<img src="img/clipart3342019.png" alt="" class="img-fluid">
 					</div>
 					<div class="col-md-9 mt-sm-20">
 						<p>We can offer you lab testing from leading labs like Quest Diagnostics and LapCorp .</p>
