--- a/index.html
+++ b/index.html
@@ -275,22 +275,22 @@ Lacerations, Loss of consciousness, Broken bones, Severe burns, and Ear infectio
 			<div class="section-top-border">
 				<h3 class="mb-30">Your satisfaction is guaranteed.</h3>
 				<div class="row">
-					<div class="col-md-3">
-						<img src="img/376-3764290_customer-satisfaction-png-clipart.png" alt="" class="img-fluid">
-					</div>
 					<div class="col-md-9 mt-sm-20">
 						<p>We stand behind the medical care and advice we provide. If you have any questions
 you can message or call our medical team anytime. If you aren't happy our service, we
 offer a 100% satisfaction guarantee and refund policy. We can't refund medicines, lab
 tests, or supplies purchased from the pharmacy or other outside businesses.</p>
 					</div>
+                    <div class="col-md-3">
+						<img src="img/376-3764290_customer-satisfaction-png-clipart.png" alt="" class="img-fluid">
+					</div>
 				</div>
 			</div>
-			<div class="section-top-border text-right">
+			<div class="section-top-border text-left">
 				<h3 class="mb-30">You don't need insurance.</h3>
 				<div class="row">
-					<div class="col-md-9">
-						<p class="text-right">You don't need insurance to use our telemedicine services and the visit fee you see is
+					<div class="col-md-9 mt-sm-20">
+						<p class="text-left">You don't need insurance to use our telemedicine services and the visit fee you see is
 the full price. There are no hidden fees. We will also work with you to help find
 medicines and pharmacies that offer the lowest price for any medicines or treatments
 we prescribe. If you have insurance, you can use it to pay for your medicine.</p>
@@ -305,11 +305,12 @@ we prescribe. If you have insurance, you can use it to pay for your medicine.</p
 			<div class="section-top-border">
 				<h3 class="mb-30">What about lab testing?</h3>
 				<div class="row">
-					<div class="col-md-3">
-						<img src="img/clipart3342019.png" alt="" class="img-fluid">
-					</div>
+					
 					<div class="col-md-9 mt-sm-20">
 						<p>We can offer you lab testing from leading labs like Quest Diagnostics and LapCorp .</p>
+					</div>
+                    <div class="col-md-3">
+						<img src="img/clipart3342019.png" alt="" class="img-fluid">
 					</div>
 				</div>
 			</div>
