--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>medical</title>
-  <link rel="icon" href="img/favicon.png">
+  <link rel="icon" href="img/logo - Copy.png">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- animate CSS -->
