--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,8 @@
   <!-- breadcrumb start-->
 
   <!-- ================ contact section start ================= -->
-  <section class="contact-section section_padding">
+ 
+    
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
         <!--<div id="map" style="height: 480px;"></div>
@@ -125,9 +126,9 @@
         </script>
         <script
           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap">
-        </script>
+        </script> -->
 
-      </div> -->
+      </div>
 
 
       <div class="row">
@@ -135,8 +136,7 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="https://formspree.io/xpzyvzpp" method="post" id="contactForm"
-            novalidate="novalidate">
+          <form class="form-contact contact_form" action="https://formspree.io/xpzyvzpp" method="post" >
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
@@ -181,7 +181,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3> (815)  -5430</h3>
+              <h3> (815) 444 - 5916</h3>
               <p>Mon to Fri 9am to 6pm</p>
             </div>
           </div>
