--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3>Contact@wellplusmedical.com</h3>
+                <h3><a href="mailto:contact@wellplusmedical.com"> Contact@wellplusmedical.com </a> </h3>
               <p>Send us your query anytime!</p>
             </div>
           </div>
