--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ we prescribe. If you have insurance, you can use it to pay for your medicine.</p
 				<div class="row">
 					
 					<div class="col-md-9 mt-sm-20">
-						<p>We can offer you lab testing from leading labs like Quest Diagnostics and LapCorp .</p>
+						<p>We can offer you lab testing from leading labs. Your lab cost is included in teh visit fees you pay unless otherwise specified. </p>
 					</div>
                     <div class="col-md-3">
 						<img src="img/clipart3342019.png" alt="" class="img-fluid">
