--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,8 @@
 
       </div>
 
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTn77zM6kRiUkYrh8Q4Kwipu3DAQBRrH05ue4U4cHOLNSAyQ/viewform?embedded=true" width="640" height="705" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        
       <div class="row">
         <div class="col-12">
           <h2 class="contact-title">Get in Touch</h2>
@@ -196,6 +197,7 @@
       </div>
     </div>
   
+        
   <!-- ================ contact section end ================= -->
 
   <!-- footer part start-->
