--- a/contact.html
+++ b/contact.html
@@ -130,45 +130,14 @@
 
       </div>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTn77zM6kRiUkYrh8Q4Kwipu3DAQBRrH05ue4U4cHOLNSAyQ/viewform?embedded=true" width="640" height="705" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        
+
       <div class="row">
         <div class="col-12">
-          <h2 class="contact-title">Get in Touch</h2>
+          <h2 class="contact-title"> Please fill out the form below</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="https://formspree.io/xpzyvzpp" method="post" >
-            <div class="row">
-              <div class="col-12">
-                <div class="form-group">
+                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTn77zM6kRiUkYrh8Q4Kwipu3DAQBRrH05ue4U4cHOLNSAyQ/viewform?embedded=true" width="600" height="770" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-                  <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
-                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'"
-                    placeholder='Enter Message'></textarea>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <input class="form-control" name="name" id="name" type="text" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter your name'" placeholder='Enter your name'>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <input class="form-control" name="email" id="email" type="email" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter email address'" placeholder='Enter email address'>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="form-group">
-                  <input class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter Subject'" placeholder='Enter Subject'>
-                </div>
-              </div>
-            </div>
-            <div class="form-group mt-3">
-              <button type="submit" class="button button-contactForm btn_1">Send Message</button>
-            </div>
           </form>
         </div>
         <div class="col-lg-4">
