--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
         <div style="height:1px;background:var(--line);margin:.5rem 0 .7rem"></div>
         <div style="margin:.5rem 0 0">
           <div style="font-weight:700;font-size:1.25em;color:#0f172a;line-height:1.35">Parth Patel, MD</div>
+          <div style="font-weight:700;font-size:1.25em;color:#0f172a;line-height:1.35">Omprakash Pansara, MD</div>
 
           <div style="margin:.6rem 0 .75rem;color:#0f172a;font-size:1.02em">
             <div style="margin:.15rem 0">
